# event_camera_py

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  ROS1.cmake  ROS2.cmake  event_array_py.repos  package.xml  rosdoc2.yaml  setup.py
.github/scripts/: build_ros1.bash  build_ros2.bash
.github/workflows/: ci.yaml  main.yaml
cmake/: CMakeListsROS1.txt  CMakeListsROS2.txt
cmake/event_array_py/: __init__.py
doc/: conf.py  event_camera_py.rst  index.rst
event_array_py/: __init__.py
event_camera_py/: __init__.py
include/event_array_py/: decoder.h  event_cd.h  event_ext_trig.h
include/event_camera_py/: accumulator.h  accumulator_unique.h  decoder.h  event_cd.h  event_ext_trig.h
src/: bag_reader_ros2.py  decoder.cpp  decoder_test_ros1.py  decoder_test_ros2.py
tests/: bag_reader_ros1.py  bag_reader_ros2.py  event_counter.py  test_1.py  test_2.py  test_events_1.bag  test_events_ros1_1.bag  test_ros1_1.py  test_ros2_1.py  test_verify.py
tests/test_events_1/: metadata.yaml  test_events_1.db3
tests/test_events_2/: metadata.yaml  test_events_2_0.mcap
tests/test_events_ros2_1/: metadata.yaml  test_events_ros2_1_0.db3
