<?xml version="1.0"?>
<package format="3">
  <name>event_camera_py</name>
  <version>1.1.2</version>
  <description>Python access for event_camera_msgs.</description>
  <maintainer email="bernd.pfrommer@gmail.com">Bernd Pfrommer</maintainer>
  <license>Apache License 2.0</license>
  <author email="bernd.pfrommer@gmail.com">Bernd Pfrommer</author>

  <!-- ROS2 dependencies -->
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_ros</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_auto</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_python</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">python_cmake_module</buildtool_depend>

  <depend condition="$ROS_VERSION == 2">pybind11_vendor</depend>

  <test_depend condition="$ROS_VERSION == 2">ament_lint_auto</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_lint_common</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_cmake_pytest</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_cmake_clang_format</test_depend>
 
  <!-- ROS1 dependencies -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <build_depend condition="$ROS_VERSION == 1">pybind11_catkin</build_depend>

  <exec_depend condition="$ROS_VERSION == 1">pybind11_catkin</exec_depend>

  <!-- common ROS1/ROS2 dependencies -->
  <depend>event_camera_msgs</depend>
  <depend>event_camera_codecs</depend>
  <depend>ros_environment</depend>
  <test_depend>python3-numpy</test_depend>

  <export>
    <!-- this is crucial else the package will not be registered! -->
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
